--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ uiTooling = "1.7.8"
 foundationLayoutAndroid = "1.7.2"
 locationdelegation = "1.1.1"
 foundationAndroid = "1.7.2"
+hilt = "2.51.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,9 +46,13 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", vers
 androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
 locationdelegation = { group = "com.google.androidbrowserhelper", name = "locationdelegation", version.ref = "locationdelegation" }
 androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundationAndroid" }
+hilt-android      = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler     = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
-
+protobuf = { id = "com.google.protobuf", version = "0.9.4" }
+hilt-android        = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+kotlin-kapt         = { id = "org.jetbrains.kotlin.kapt" }
